Fix hrz scrollbar display bug in FF and IE

--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -70,6 +70,9 @@
 	color: rgba(0,0,0,0.33);
 }
 
+.CodeMirror-scroll {
+	overflow: hidden !important;
+}
 
 /* Theme */
 
